--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
   </head>
   <body>
     <div class="container">
-      <form>
+      <form onsubmit="verificarPasswords(); return false">
+        <div id="error" class="alert alert-danger ocultar" role="alert">
+          Las Contraseñas no coinciden
+      </div>
+      <div id="ok" class="alert alert-success ocultar" role="alert">
+          Contraseña correcta
+      </div>
         <div class="input-container">
           <label for="nombre">Nombre:</label>
-          <input type="text" id="nombre" name="nombre" title="El nombre solo puede contener letras" required onblur="validarNombre()" />
+          <input type="text" id="nombre" name="nombre" title="El nombre solo puede contener letras" pattern="^[a-zA-Z\s]{2,254}" required onblur="validarNombre()" />
           <span class="icono-validacion validacion-correcto"></span>
           <span class="icono-validacion validacion-incorrecto"></span>
         </div>
@@ -32,7 +38,7 @@
           <span class="icono-validacion validacion-correcto"></span>
           <span class="icono-validacion validacion-incorrecto"></span>
         </div>
-        <button type="submit" onclick="alert('Registro completado')">Enviar</button>
+        <button type="submit" id="login" class="btn btn-primary" onclick="alert('Registro completado')">Enviar</button>
       </form>
     </div>
     <script src="./index.js"></script>
